[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Center" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -42.0
margin_right = 6.0
margin_bottom = -22.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -10.0
margin_right = 6.0
margin_bottom = 10.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "Settings"

[node name="Exit" type="Button" parent="Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 22.0
margin_right = 6.0
margin_bottom = 42.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "Exit"

[connection signal="button_up" from="Center/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Center/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="Center/Exit" to="." method="_on_Exit_button_up"]
